Minor spacing fix

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -45,8 +45,8 @@ body {
 }
 h2 {
   border-top: 1px solid #ddd;
-  padding-top: .5em;
-  font-size: 2.5em;
+  padding-top: 1em;
+  font-size: 2.25em;
   margin: 1em 0 1em;
   @include mq(small) {
     line-height: 1.2;
